[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls" ] }
axum = "0.7.5"
serde_json = "1.0.117"
serde = "1.0.203"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.8.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
